Update ruby version in ci file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.0 # Cambia a la versión de Ruby que uses
+          ruby-version: 3.2.2
 
       - name: Install dependencies
         run: |
